  EntityConnectionServer.AuxiliaryServer moved to common.server.Server
  EntityRestServer no longer depends on framework server
  Util.getVersion() now caches the version object
  Util.VERSION is now final
  DefaultColumnProperty.setColumnName() bug fixed, did not set the value
  DefaultColumnProperty primitive value fetchers now only call ResultSet.wasNull() if the actual value warrants it
  DefaultDatabaseConnection, LocalEntityConnection, DatabaseUtil, DefaultRemoteEntityConnection, logAccess() and logExit() now return right away if the method logger is not enabled
  MethodLogger always clears log on enabled state change
  LocalEntityConnection bug fixed, select for update did not use selectTableName
  DefaultEntity.validateType() now validates entity types, added a couple of related tests
  Values.DefaultValue bug fixed, did not propagate the value when firing a change event
  DefaultEntityDefinition.QueriedKeyGenerator bug fixed, caching of key query was problematic when working with different underlying databases
  ClientMonitorPanel, can now disconnect multiple clients at a time
  EntityLookupField.performLookup() bug fixed, did not handle null search string value
  EntityLookupField.performLookup() bug fixed, did not update colors after lookup
  EntityLookupField, constructor bug fixed, searchHint was initialized to early, must be done after the call to linkToModel() for the hint to show up right away
  EntityPanel.activatePanel() bug fixed, initial focus always went to the table instead of the edit panel when using keyboard navigation
  User, cached hashCode removed, unnecessary optimization
  EntityLookupField, constructor bug fixed, searchHint initialization moved further back
  EntityUtil.getModifiedProperty() and getModifiedExceptionMessage() added
  LocalEntityConnection.lockAndCheckForUpdate() and EntityEditPanel.handleException() now use the above
  DefaultEntityEditModel.getDefaultEntity() bug fixed, did not handle transient properties